# agentic_article_generator

./: .gitignore  README.md  main.py  pyproject.toml
backend/: README.md  app.py  main.py  requirements.txt
backend/agents/: check_gpu.py  prompts.py
backend/app/: app.py
backend/config/: check_gpu.py  prompts.py
backend/instance/: article-generator.db
backend/llm/: main.py
backend/models/: __init__.py  article.py  drafts.py  templates.py  theme.py
backend/routes/: article.py  drafts.py  templates.py  templates_bp.py  theme.py  theme_bp.py
backend/schemas/: __init__.py  article.py  drafts.py  templates.py  theme.py
backend/utils/: TO_DO.md  expansion_project.md  models.md
